k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: msa-hw2-service

spec:
  selector:
    app: msa-hw2

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
