k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: msa-hw2-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: msa-hw2-service
                port:
                  number: 80
